fix up spacing in markdown

--- a/iNZight/css/main.css
+++ b/iNZight/css/main.css
@@ -7904,7 +7904,7 @@ a img {
   font-weight: normal; }
 .rhistory h3 {
   font-size: 1.1em;
-  margin-top: 0em;
+  margin: 0em 0 0.5em;
   font-weight: normal; }
 .rhistory h4 {
   font-size: 1em;
