--- a/iNZight/styles/3-modules/_rhistory.sass
+++ b/iNZight/styles/3-modules/_rhistory.sass
@@ -8,7 +8,7 @@
 
   h3
     font-size: 1.1em
-    margin-top: 0em
+    margin: 0em 0 0.5em
     font-weight: normal
 
   h4
